--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "beautify": "lint-staged",
     "start": "nodemon --inspect src/index.js",
-    "watch":"sass --watch src/resources/scss/app.scss src/public/css/app.css",
+    "watch": "sass --watch src/resources/scss/app.scss src/public/css/app.css",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "lint-staged": {
+    "src/**/*.{js,json,scss}": "--single-quote --trailing-comma all --tab-width 4 --write"
   },
   "repository": {
     "type": "git",
@@ -26,8 +30,11 @@
     "express-handlebars": "^5.3.3"
   },
   "devDependencies": {
+    "husky": "^7.0.2",
+    "lint-staged": "^11.1.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
+    "prettier": "^2.4.1",
     "sass": "^1.41.1"
   }
 }
