--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "beautify": "lint-staged",
     "start": "nodemon --inspect src/index.js",
     "watch": "sass --watch src/resources/scss/app.scss src/public/css/app.css",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "lint-staged": {
-    "src/**/*.{js,json,scss}": "--single-quote --trailing-comma all --tab-width 4 --write"
+    "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
   },
   "repository": {
     "type": "git",
@@ -30,7 +31,7 @@
     "express-handlebars": "^5.3.3"
   },
   "devDependencies": {
-    "husky": "^7.0.2",
+    "husky": "^7.0.0",
     "lint-staged": "^11.1.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
