--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^6.0.8"
   },
   "devDependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.5",
     "husky": "^7.0.0",
     "lint-staged": "^11.1.2",
     "morgan": "^1.10.0",
