--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
-    "mongoose": "^6.0.8"
+    "mongoose": "^6.0.8",
+    "mongoose-slug-generator": "^1.0.4"
   },
   "devDependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
     "husky": "^7.0.0",
+    "jquery": "^3.6.0",
+    "jsdom": "^17.0.0",
     "lint-staged": "^11.1.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
