--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
+    "method-override": "^3.0.0",
     "mongoose": "^6.0.8",
     "mongoose-slug-generator": "^1.0.4"
   },
