--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
     "method-override": "^3.0.0",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.8",
+    "mongoose-delete": "^0.5.4",
     "mongoose-slug-generator": "^1.0.4"
   },
   "devDependencies": {
